--- a/ui/admin/src/assets/i18n/es.json
+++ b/ui/admin/src/assets/i18n/es.json
@@ -35,13 +35,36 @@
     "locations": {
       "title": "Ubicaciones del Club",
       "noLocations": "No se encontraron ubicaciones. Agrega tu primera ubicación para comenzar.",
-      "loading": "Cargando ubicaciones..."
+      "loading": "Cargando ubicaciones...",
+      "addLocation": "Agregar Ubicación"
+    }
+  },
+  "location": {
+    "create": {
+      "title": "Agregar Nueva Ubicación"
+    },
+    "form": {
+      "address": "Dirección",
+      "addressRequired": "La dirección es requerida",
+      "city": "Ciudad",
+      "cityRequired": "La ciudad es requerida",
+      "state": "Estado",
+      "stateRequired": "El estado es requerido",
+      "postalCode": "Código Postal",
+      "postalCodeRequired": "El código postal es requerido",
+      "country": "País",
+      "countryRequired": "El país es requerido",
+      "timezone": "Zona Horaria",
+      "timezoneRequired": "La zona horaria es requerida"
     }
   },
   "common": {
     "previous": "Anterior",
     "next": "Siguiente",
     "page": "Página",
-    "of": "de"
+    "of": "de",
+    "save": "Guardar",
+    "saving": "Guardando...",
+    "cancel": "Cancelar"
   }
 } 
