--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -36,7 +36,12 @@
       "title": "Club Locations",
       "noLocations": "No locations found. Add your first location to get started.",
       "loading": "Loading locations...",
-      "addLocation": "Add Location"
+      "addLocation": "Add Location",
+      "delete": {
+        "title": "Delete Location",
+        "message": "Are you sure you want to delete this location? This action cannot be undone.",
+        "confirm": "Delete"
+      }
     }
   },
   "location": {
