--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -52,7 +52,27 @@
       "title": "Edit Location"
     },
     "details": {
-      "title": "Club Details"
+      "title": "Club Details",
+      "tabs": {
+        "workouts": "Workouts",
+        "trainers": "Trainers",
+        "schedule": "Schedule"
+      },
+      "workouts": {
+        "title": "Available Workouts",
+        "add": "Add Workout",
+        "empty": "No workouts available yet. Add your first workout type to get started."
+      },
+      "trainers": {
+        "title": "Club Trainers",
+        "add": "Add Trainer",
+        "empty": "No trainers assigned yet. Add trainers to start creating schedules."
+      },
+      "schedule": {
+        "title": "Class Schedule",
+        "add": "Add Class",
+        "empty": "No classes scheduled yet. Add workouts and trainers first, then create your schedule."
+      }
     },
     "form": {
       "address": "Address",
@@ -70,14 +90,14 @@
     }
   },
   "common": {
-    "previous": "Previous",
-    "next": "Next",
-    "page": "Page",
-    "of": "of",
+    "back": "Back",
     "cancel": "Cancel",
     "save": "Save",
     "saving": "Saving...",
     "loading": "Loading...",
-    "back": "Back to Dashboard"
+    "previous": "Previous",
+    "next": "Next",
+    "page": "Page",
+    "of": "of"
   }
 }
