Fix text at the bottom of registration page

--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -186,6 +186,10 @@
     "error": {
       "emailExists": "An account with this email already exists.",
       "generic": "An error occurred during registration. Please try again."
+    },
+    "login": {
+      "text": "Already have an account?",
+      "link": "Log in"
     }
   }
 }
