--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -43,7 +43,12 @@
     "welcome": "Welcome, {{name}}!",
     "user": "User",
     "fitnessClub": {
-      "label": "Fitness Club:"
+      "label": "Fitness Club"
+    },
+    "tabs": {
+      "locations": "Locations",
+      "workouts": "Workouts",
+      "trainers": "Trainers"
     },
     "subtitle": "Your fitness journey management starts here.",
     "locations": {
@@ -56,6 +61,16 @@
         "message": "Are you sure you want to delete this location? This action cannot be undone.",
         "confirm": "Delete"
       }
+    },
+    "workouts": {
+      "title": "Available Workouts",
+      "add": "Add Workout",
+      "empty": "No workouts available yet. Add your first workout type to get started."
+    },
+    "trainers": {
+      "title": "Club Trainers",
+      "add": "Add Trainer",
+      "empty": "No trainers assigned yet. Add trainers to start creating schedules."
     }
   },
   "location": {
