Update content for club location page. Fix url for this page

--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -83,8 +83,9 @@
       "title": "Edit Location"
     },
     "details": {
-      "pageTitle": "Club Details",
+      "pageTitle": "Club Location Details",
       "title": "Club Details",
+      "club_location_title": "Club Location Details",
       "tabs": {
         "workouts": "Workouts",
         "trainers": "Trainers",
